update code for assessment upload, add heroku remote for cms project

--- a/views/create-assessment.ejs
+++ b/views/create-assessment.ejs
@@ -39,33 +39,33 @@
               <span class="question_num">Q.1</span>
               <input type="text" name="question" class="question" placeholder="Type Your Question Here">
               <input id="quesImgFile" type="file" class="quesImage" name="questionImage">
-              <button id="removeImg">Remove Image</button>
+              <!-- <button id="removeImg">Remove Image</button> -->
             </div>
             <div class="option_area">
               <div class="opt_a">
                 <span class="question_num">A.</span>
                 <input type="text" name="opt_A" class="option" placeholder="Type Option A Here (Right Answer)">
-                <!-- <input id="optAFile" type="file" class="optImage" name="option_A_Image"> -->
-                <div class="upload-image">
+                <input id="optAFile" type="file" class="optImage" name="option_A_Image">
+                <!-- <div class="upload-image">
                   <img src="/assets/images/Group.svg" alt="upload-logo"
                     style="width: 20px; margin-right: 5px; margin-left: 4px">
                   <input id='optAFile' type='file' class="optImage" name="option_A_Image" hidden />
                   <input id="buttonId" class="upload-text" type="button" value="Upload Image"
                     style="border: none; cursor: pointer;">
-                </div>
-                <span id="imageAName" style="margin-left: 5px; font-size: 14px"></span>
+                </div> -->
+                <!-- <span id="imageAName" style="margin-left: 5px; font-size: 14px"></span> -->
               </div>
               <div class=" opt_b">
                 <span class="question_num">B.</span>
                 <input type="text" name="opt_B" class="option" placeholder="Type Option B Here">
-                <!-- <input id="optBFile" type="file" class="optImage" name="option_B_Image" hidden> -->
-                <div class="upload-image">
+                <input id="optBFile" type="file" class="optImage" name="option_B_Image">
+                <!-- <div class="upload-image">
                   <img src="/assets/images/Group.svg" alt="upload-logo"
                     style="width: 20px; margin-right: 5px; margin-left: 4px">
                   <input id="optBFile" type="file" class="optImage" name="option_B_Image" hidden>
                   <input id="buttonId" class="upload-text" type="button" value="Upload Image"
                     style="border: none; cursor: pointer;">
-                </div>
+                </div> -->
               </div>
               <div class="opt_c">
                 <span class="question_num">C.</span>
