--- a/views/assessment-bulk-upload.ejs
+++ b/views/assessment-bulk-upload.ejs
@@ -31,12 +31,12 @@
                 <span class="instruction-text-heading">Instructions</span>
                 <div class="instructions-div">
                     <div class="instruction-area">
-                        <span class="instruction-text-1">1. Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed
+                        <!-- <span class="instruction-text-1">1. Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed
                             do
                             eiusmod tempor incididunt ut
                             labore et
-                            dolore magna aliqua.</span>
-                        <span class="instruction-text-1">2.Inorder to upload the assessments in bulk, please download
+                            dolore magna aliqua.</span> -->
+                        <span class="instruction-text-1">1.Inorder to upload the assessments in bulk, please download
                             the
                             template
                             first by clicking on the Download Template button.</span>
