--- a/views/books-bulk-upload.ejs
+++ b/views/books-bulk-upload.ejs
@@ -30,12 +30,12 @@
                 <span class="bulk-book-instruction-heading">Instructions</span>
                 <div class="bulk-book-instructions-div">
                     <div class="bulk-book-instruction-area">
-                        <span class="bulk-book-instruction-text-1">1. Lorem ipsum dolor sit amet, consectetur adipiscing
+                        <!-- <span class="bulk-book-instruction-text-1">1. Lorem ipsum dolor sit amet, consectetur adipiscing
                             elit,
                             sed
                             do eiusmod tempor incididunt ut labore et
-                            dolore magna aliqua.</span>
-                        <span class="bulk-book-instruction-text-1">2.Inorder to upload books/notes in bulk, please
+                            dolore magna aliqua.</span> -->
+                        <span class="bulk-book-instruction-text-1">1.Inorder to upload books/notes in bulk, please
                             download
                             the template
                             first by clicking on the Download Template button.</span>
@@ -87,7 +87,7 @@
                     <span class="create-assessment-close">&times;</span>
                 </div>
                 <div class="create-assessment-modal-body">
-                    <span id="submitMsg">Click Submit To Upload Assessments</span>
+                    <span id="submitMsg">Click Submit To Upload Book Links.</span>
                 </div>
                 <div class="create-assessment-bottom-div">
                     <button id="finalSubmit" class="finalSubmit">Submit</button>
