--- a/views/create-assessment.ejs
+++ b/views/create-assessment.ejs
@@ -109,4 +109,4 @@
 
 </html>
 
-<input id="optBFile" type="file" class="optImage" name="option_B_Image" hidden>
+<!-- <input id="optBFile" type="file" class="optImage" name="option_B_Image" hidden> -->
