--- a/views/upload_note_links.ejs
+++ b/views/upload_note_links.ejs
@@ -44,7 +44,7 @@
                     <span class="create-assessment-close">&times;</span>
                 </div>
                 <div class="create-assessment-modal-body">
-                    <span id="ImgProgress">Click Submit To Upload Assessments.</span>
+                    <span id="ImgProgress">Click Submit To Upload Book Links</span>
                 </div>
                 <div class="create-assessment-bottom-div">
                     <button id="finalSubmit" class="finalSubmit">Submit</button>
