--- a/views/videos-bulk-upload.ejs
+++ b/views/videos-bulk-upload.ejs
@@ -29,11 +29,11 @@
                 <span class="bulk-video-instruction-heading">Instructions</span>
                 <div class="bulk-video-instructions-div">
                     <div class="bulk-video-instruction-area">
-                        <span class="bulk-video-instruction-text-1">1. Lorem ipsum dolor sit amet, consectetur
+                        <!-- <span class="bulk-video-instruction-text-1">1. Lorem ipsum dolor sit amet, consectetur
                             adipiscing
                             elit, sed
-                            do eiusmod tempor incididunt utlabore et dolore magna aliqua.</span>
-                        <span class="bulk-video-instruction-text-1">2.Inorder to upload the videos in bulk, please
+                            do eiusmod tempor incididunt utlabore et dolore magna aliqua.</span> -->
+                        <span class="bulk-video-instruction-text-1">1.Inorder to upload the videos in bulk, please
                             download
                             the template
                             first by clicking on the Download Template button.</span>
@@ -83,7 +83,7 @@
                     <span class="create-assessment-close">&times;</span>
                 </div>
                 <div class="create-assessment-modal-body">
-                    <span id="submitMsg">Click Submit To Upload Assessments</span>
+                    <span id="submitMsg">Click Submit To Upload Video Links.</span>
                 </div>
                 <div class="create-assessment-bottom-div">
                     <button id="finalSubmit" class="finalSubmit">Submit</button>
