--- a/views/login.ejs
+++ b/views/login.ejs
@@ -54,14 +54,14 @@
         // Your web app's Firebase configuration
         // For Firebase JS SDK v7.20.0 and later, measurementId is optional
         const firebaseConfig = {
-            apiKey: "AIzaSyDNFbXQo3Fd7PYfWBwGJd6XdihZ3w-yEvk",
-            authDomain: "node-project-c4942.firebaseapp.com",
-            databaseURL: "https://node-project-c4942-default-rtdb.firebaseio.com",
-            projectId: "node-project-c4942",
-            storageBucket: "node-project-c4942.appspot.com",
-            messagingSenderId: "581470710657",
-            appId: "1:581470710657:web:a4792037ef1d415c375680",
-            measurementId: "G-HQZDXNGMJ3"
+            apiKey: "AIzaSyC5UiikQU2_-_omC-qKYcXA0X4Ta8whfuI",
+            authDomain: "iprep-7f10a.firebaseapp.com",
+            databaseURL: "https://iprep-dev.firebaseio.com/",
+            projectId: "iprep-7f10a",
+            storageBucket: "iprep-7f10a.appspot.com",
+            messagingSenderId: "165257927521",
+            appId: "1:165257927521:web:3d145f0c2b04eafd",
+            measurementId: "G-SXFQPY83P3"
         };
 
         // Initialize Firebase
@@ -108,7 +108,17 @@
         })
 
         getCodeButton.addEventListener('click', async (e) => {
-
+            // fetch("/setData", {
+            //     method: "POST",
+            //     headers: {
+            //         "Content-Type": "application/json",
+            //     },
+            //     body: JSON.stringify({"uid":"FxEJcgJx7ONmzolUeVCSa6mqU5E3"})
+            // }).then((res) => res.json()).then((res) => {
+            //     console.log(res);
+            // }).catch((e) => {
+            //     console.log(e);
+            // })
             if (emailValue.hasAttribute("class") || phoneNumberField.hasAttribute("class")) {
                 const targetInput = document.getElementsByClassName("active");
                 const provider = targetInput[0].getAttribute("id");
